--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
   "name": "DoseBot",
-  "version": "3.0.0",
-  "description": "Dosage bot",
+  "version": "5.0.0",
+  "description": "The number one Discord harm reduction bot. Made with Node and love.",
   "main": "bot.js",
   "repository": "https://github.com/GabrielMorris/discordbot.git",
   "author": "CocoaBunny",
-  "license": "Unlicense",
+  "license": "BSD-3-Clause",
   "dependencies": {
     "bufferutil": "^4.0.0",
     "discord-anti-spam": "^1.1.1",
-    "discord.io": "^2.5.3",
     "discord.js": "^11.4.2",
     "dotenv": "^5.0.1",
-    "erlpack": "github:hammerandchisel/erlpack",
     "forever": "^0.15.3",
-    "js-yaml": "^3.11.0",
-    "moment": "^2.23.0",
     "mongodb": "^3.1.3",
-    "mongoose": "^5.2.8",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "wisdom-of-chopra": "^1.0.9"
